# pi_post_process

./: Cargo.toml  README.md
documents/: renderpass.MD  后处理.MD  后处理.drawio  材质-Shader.MD  材质-Shader.drawio  渲染流程.drawio
examples/: main.rs
examples/renderer/: mod.rs  renderer.rs
src/: error.rs  lib.rs  postprocess.rs  postprocess_flags.rs  postprocess_geometry.rs  postprocess_pipeline.rs  postprocess_renderer.rs  prelude.rs  temprory_render_target.rs
src/effect/: alpha.rs  area_mask.rs  bloom_dual.rs  blur_bokeh.rs  blur_direct.rs  blur_dual.rs  blur_gauss.rs  blur_radial.rs  clip_sdf.rs  color_balance.rs  color_effect.rs  color_filter.rs  color_scale.rs  copy.rs  filter_brightness.rs  filter_mask.rs  filter_sobel.rs  horizon_glitch.rs  hsb.rs  image_mask.rs  mod.rs  radial_wave.rs  vignette.rs
src/geometry/: glitch_geometry.rs  image_effect_geometry.rs  mod.rs  vertex_buffer_layout.rs
src/image_effect/: base.rs  blur_bokeh.rs  blur_direct.rs  blur_dual.rs  blur_gauss.rs  blur_radial.rs  clip_sdf.rs  color_effect.rs  copy.rs  filter_brightness.rs  filter_sobel.rs  horizon_glitch.rs  image_mask.rs  mod.rs  radial_wave.rs
src/material/: blend.rs  color_block.rs  depth_and_stencil.rs  flag_block.rs  float2_block.rs  float4_block.rs  float_block.rs  fragment_state.rs  int_block.rs  material.rs  mod.rs  pipeline.rs  shader.rs  target_format.rs  texture_block.rs  tools.rs
src/renderer/: bloom_dual.rs  blur_bokeh.rs  blur_direct.rs  blur_dual.rs  blur_gauss.rs  blur_radial.rs  color_effect.rs  copy_intensity.rs  filter_brightness.rs  filter_sobel.rs  horizon_glitch.rs  mod.rs  radial_wave.rs  renderer.rs
src/shaders/: base.vert  blur_bokeh.frag  blur_bokeh.vert  blur_direct.frag  blur_direct.vert  blur_dual.frag  blur_dual.vert  blur_gauss.frag  blur_gauss.vert  blur_radial.frag  blur_radial.vert  clip_sdf.frag  clip_sdf.vert  color_effect.frag  color_effect.vert  copy.frag  copy.vert  filter_brightness.frag  filter_brightness.vert  horizon_glitch.frag  horizon_glitch.vert  image_mask.frag  image_mask.vert  radial_wave.frag  radial_wave.vert  sobel.frag  sobel.vert
