[package]
name = "pi_postprocess"
version = "0.1.0"
authors = ["bp0002 <bp950722@outlook.com>"]
edition = "2021"

[dependencies]
pollster = "0.2"
rand = "0.8"
guillotiere = { version = "0.6" }
num-traits = "0.2"
derive_deref = "1.1"
log = "0.4"
env_logger = "0.9"
smallvec = { version = "1.8", features = ["serde"] }
bytemuck = { version = "1.4", features = ["derive"] }
naga = { version = "0.12" }
wgpu = { version = "0.16", default-features = false, features = ["glsl"] }

pi_hash = "0.1"
pi_enum_default_macro = "0.1"
pi_assets = "0.13"
pi_map = "0.1"

pi_wy_rng = "0.1"
pi_render = { version = "0.1", registry = "yn" }

pi_share = "0.4"
pi_atom = { version = "0.2", features = ["serde"] }

[dev-dependencies]
winit = { version = "0.27", registry = "yn" }
wgpu = "0.16"
image = "0.24"
env_logger = "0.9"
float-ord = "0.3"
async-trait = "0.1"
pi_futures          = "0.1"
pi_time             = "0.2.6"
bevy = { version = "0.11" }
pi_bevy_render_plugin   = { version = "0.1", registry = "yn"}
pi_bevy_winit_window    = { version = "0.1", registry = "yn"}
pi_bevy_ecs_extend      = { version = "0.1", registry = "yn"}
pi_bevy_asset           = { version = "0.1", registry = "yn"}
pi_window_renderer      = { version = "0.1", registry = "yn"}


[patch.yn]
# pi_hal = { path = "../pi_hal" }
# winit = { path = "../winit" }
# pi_render = { path = "../winit" }

# pi_bevy
pi_bevy_render_plugin = { path="../pi_bevy/crates/render" }
pi_bevy_winit_window = { path="../pi_bevy/crates/winit_window" }
pi_bevy_ecs_extend = { path="../pi_bevy/crates/ecs_extend" }
pi_bevy_asset = { path="../pi_bevy/crates/asset" }
pi_window_renderer = { path="../pi_bevy/crates/window_renderer" }
pi_bevy_log = { path="../pi_bevy/crates/log" }

[[example]]
name = "test"
path = "examples/main.rs"

[net]
git-fetch-with-cli = true
offline = true
