[package]
name = "pi_postprocess"
version = "0.1.4"
authors = ["bp0002 <bp950722@outlook.com>"]
edition = "2021"

[dependencies]
pollster                = "0.2"
rand                    = "0.8"
guillotiere             = { version = "0.6" }
num-traits              = "0.2"
derive_deref            = "1.1"
log                     = "0.4"
env_logger              = "0.9"
smallvec                = { version = "1.8", features = ["serde"] }
bytemuck                = { version = "1.4", features = ["derive"] }
naga                    = { version = "0.19" }
wgpu                    = { version = "0.1", registry = "yn", package = "pi_wgpu" }
bevy                    = { version = "0.11", default-features = false }

crossbeam               = "0.8"
pi_hash                 = "0.1"
pi_enum_default_macro   = "0.1"
pi_assets               = "0.13"
pi_map                  = "0.2"
pi_wy_rng               = "0.1"
pi_render               = { version = "0.1", registry = "yn" }
pi_share                = "0.4"
pi_atom                 = { version = "0.5", features = ["serde"] }
pi_bevy_render_plugin   = { version = "0.1", registry = "yn"}
pi_bevy_winit_window    = { version = "0.1", registry = "yn"}
pi_bevy_ecs_extend      = { version = "0.1", registry = "yn"}
pi_bevy_asset           = { version = "0.1", registry = "yn"}
ahash = "0.8"
pi_winit                = { version = "0.27", registry = "yn", package = "winit" }

[dev-dependencies]
# winit                   = { version = "0.27", registry = "yn" }
pi_winit                = { version = "0.27", registry = "yn", package = "winit" }
wgpu                    = { version = "0.1", registry = "yn", package = "pi_wgpu"}
wgpu1                   = { version = "0.19", features = ["glsl"],  package = "wgpu" }
image                   = "0.24"
env_logger              = "0.9"
float-ord               = "0.3"
async-trait             = "0.1"
pi_futures              = "0.1"
pi_time                 = "0.2.6"
pi_null                 = "0.1"
bevy                    = { version = "0.11", default-features = false, features = ["bevy_winit"] }

[patch."https://github.com/GaiaWorld/pi_sdf"]
pi_sdf = { path = "../pi_sdf" }

[patch.yn]
pi_hal = { path = "../pi_hal" }
pi_wgpu = {path = "../pi_wgpu"}
pi_egl = {path = "../pi_egl"}
winit = { path = "../winit"}
# pi_render = { path = "../winit" }
# pi_render = { path = "../pi_render_new_graphic" }
# render_utils = { path = "../pi_render_new_graphic/crates/render_utils" }
# render_derive = { path = "../pi_render_new_graphic/crates/render_derive" }
# render_compile = { path = "../pi_render_new_graphic/crates/render_compile" }
pi_render = { path = "../pi_render" }
render_utils = { path = "../pi_render/crates/render_utils" }
render_derive = { path = "../pi_render/crates/render_derive" }
render_compile = { path = "../pi_render/crates/render_compile" }

# pi_bevy
pi_bevy_render_plugin = { path="../pi_bevy_new_graphic/crates/render" }
pi_bevy_winit_window = { path="../pi_bevy_new_graphic/crates/winit_window" }
pi_bevy_ecs_extend = { path="../pi_bevy_new_graphic/crates/ecs_extend" }
pi_bevy_asset = { path="../pi_bevy_new_graphic/crates/asset" }
pi_bevy_log = { path="../pi_bevy_new_graphic/crates/log" }

[[example]]
name = "test"
path = "examples/main.rs"

[net]
git-fetch-with-cli = true
offline = true
